@@ -1,0 +1,6 @@
+AM_CXXFLAGS = @LIBSYNCE_CFLAGS@ -Wall
+AM_LDFLAGS = @LIBSYNCE_LIBS@
+
+INCLUDES = -I$(top_srcdir)/src
+
+EXTRA_DIST = invokeme.cc invokeme.dll Makefile.dll README
